Fixed wrapping + fixed some styling issues

--- a/css/P1.css
+++ b/css/P1.css
@@ -10,20 +10,20 @@
 
 /* Mohammed Al-Bashiri March 7, 2022 */
 /* blog name, edit and publish font and colour*/
-.nameStyle {
+.name-style {
   color: blue;
   font-size: 25px;
 }
 
 /* Mohammed Al-Bashiri March 7, 2022 */
 /* blog name text boxes */
-.boxWidth {
+.box-width {
   width: 300px !important;
 }
 
 /* Mohammed Al-Bashiri March 7, 2022 */
 /* switches */
-.toggleStyle {
+.toggle-style {
   margin-left: 0px !important;
   padding-left: 5px !important;
   height: 40px !important;
@@ -32,7 +32,7 @@
 /*
     Used to center a <div>. (SDR March 5, 2022)
 */
-.centerBox {
+.center-box {
   margin: auto;
   width: 68%;
   padding: 10px;
@@ -41,14 +41,14 @@
 /*
     The width remaining to reach end of publish toggle. (SDR March 5, 2022)
 */
-.fullWid {
+.full-width {
   width: 930px;
 }
 
 /*
     Sets the size of the text box for the blog. (SDR March 5, 2022)
 */
-.blogSize {
+.blog-size {
   height: 300px;
   padding: 10px;
 }
@@ -56,6 +56,6 @@
 /*
     Used for spacing between keys. (SDR March 5, 2022)
 */
-.keySpacing {
+.key-spacing {
   width: 5px;
 }
